added some additional functionality in signup page

--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,5 @@ body {
   height: 100vh;
   margin: 0;
   padding: 0;
+  background: "linear-gradient(135.3deg, rgba(192, 213, 255, 0.532) -10.47%, rgba(255, 255, 255, 0.076) 104.07%)";
 }
