created infDetail Page

--- a/src/index.css
+++ b/src/index.css
@@ -7,4 +7,8 @@ body {
   margin: 0;
   padding: 0;
   background: "linear-gradient(135.3deg, rgba(192, 213, 255, 0.532) -10.47%, rgba(255, 255, 255, 0.076) 104.07%)";
+  font-family: "Montserrat";
+}
+#root {
+  min-height: 100vh;
 }
